Replace javax.xml.bind.DatatypeConverter by org.bouncycastle.util.encoders.Base64
Since javax.xml.bind was removed from JRE9 and the library won't work
otherwise (without hacks)